Collabtive 3.0.1
+ Fix broken link to task list in upcoming milestones block
+ Fix XSS Vector in the user profile
+ Fix selection of subfolders when uploading files

Collabtive 3.0
+ All external library dependencies now live in /vendor/ and are managed using composer.
+ Restructured templates. Form templates now live in the /forms/ subdirectory of the template folder.
+ Start using native HTML5 form validation instead of a JS library
+ Added blockaccordeon for the blocks in the userprofile
+ Improved the look of the file list view
+ Fix a bug where getThemes() wouldnt finish if a template has no /theme/ folder
+ Properly minify all JS assets using closure compiler
+ Display the parent message in the breadcrumbs on top when viewing a message
+ Messages now can have recursive replies. That is, each reply can have a reply, which can have a reply and so on.
+ Private messages can now be added to any project. They can only be viewed by their designated recipient.
+ Don't show mobile template in the template selector. these should not be activated directly but set by class mobileDetect()
+ Updated the database schema of new installations to use innoDB instead of myISAM storage engine. myISAM is outdated, and innoDB now the default on
  mysql.
+ Moved helper classes to replace inline styles to /theme/css/style_helpers.css
+ Most inline styles have been refactored to classes. One of the next releases will disable inline style in CSP
+ The sidebar is collapsed by default, giving more room for the main content area
  It can be expanded by clicking
+ Added viewManager functions that make it easy to create, and update reactive vue.js views
+ Added helper methods css(), cssAll, cssId() to ajax.js
+ All animations now use velocity.js. This removes the dependency on scriptculous and enables HW acceleration on mobile.
+ Implemented new modal dialog for the calendar, that is not based on prototype
+ Implemented accordeon that does not depend on prototype
+ Added example plugin